[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/2d/kinematicbody/Character2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/2d/kinematicbody/StateLabel2D.gd" type="Script" id=3]
[ext_resource path="res://scenes/game/2d/kinematicbody/KinematicLevel2D.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 448, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 640, 56 )
b = Vector2( -640, 56 )

[node name="KinematicLevel2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Floor"]
modulate = Color( 0.0705882, 0.705882, 0, 1 )
position = Vector2( -6.77109e-05, 0 )
scale = Vector2( 14, 0.25 )
texture = ExtResource( 1 )

[node name="Character2D" parent="." instance=ExtResource( 2 )]

[node name="StateLabel2D" type="Control" parent="Character2D"]
margin_left = -32.0
margin_top = -29.0
margin_right = 32.0
margin_bottom = 35.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
stack_player_np = NodePath("../../../KinematicLevel2D/Character2D/StateMachinePlayer")

[node name="Flag" type="Sprite" parent="."]
modulate = Color( 1, 0.192157, 0.192157, 1 )
position = Vector2( 416, -40 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Flag"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flag/Area2D"]
shape = SubResource( 2 )

[node name="FallDeathArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallDeathArea2D"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Flag/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="FallDeathArea2D" to="." method="_on_FallDeathArea2D_body_entered"]
